Ajout des messages overlay